test/parser/closure-no-bindings.b3.expect
Error:
12:     %result: int
        ^
expected ':='

